Unify/filter data and include legend

--- a/MVCDashboard/Views/Home/Index.cshtml
+++ b/MVCDashboard/Views/Home/Index.cshtml
@@ -26,3 +26,41 @@
         settings.UseSubmitBehavior = true;
     }).GetHtml()
 }
+
+<hr />
+<table class="roleTable">
+    <thead>
+        <tr>
+            <th>Role</th>
+            <th>Sql</th>
+            <th>Json</th>
+            <th>Excel</th>
+            <th>Object</th>
+            <th>OLAP</th>
+            <th>Extract</th>
+            <th>Entity Framework</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>Admin</td>
+            <td>Categories</td>
+            <td>Customers</td>
+            <td>Bikes</td>
+            <td>Sales</td>
+            <td>Customers</td>
+            <td>Sales</td>
+            <td>Categories</td>
+        </tr>
+        <tr>
+            <td>User</td>
+            <td>Categories limited+filtered</td>
+            <td>Customers limited+filtered</td>
+            <td>Bikes limited</td>
+            <td>Sales limited</td>
+            <td>-</td>
+            <td>-</td>
+            <td>Categories 2</td>
+        </tr>
+    </tbody>
+</table>
