Update naming logic

--- a/MVCDashboard/Views/Home/Index.cshtml
+++ b/MVCDashboard/Views/Home/Index.cshtml
@@ -54,13 +54,13 @@
         </tr>
         <tr>
             <td>User</td>
-            <td>Categories limited+filtered</td>
-            <td>Customers limited+filtered</td>
-            <td>Bikes limited</td>
-            <td>Sales limited</td>
+            <td>Categories from different source with optional filter</td>
+            <td>Customers from different source with optional filter</td>
+            <td>Bikes from different source</td>
+            <td>Sales from different source</td>
             <td>-</td>
             <td>-</td>
-            <td>Categories 2</td>
+            <td>Categories from different source</td>
         </tr>
     </tbody>
 </table>
